--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<link rel="shortcut icon" href="img/logo.png" type="image/png">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.css">
-	<title>-I ЕКОЛОГІЯ I-</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;800&family=Poppins:wght@600&display=swap" rel="stylesheet">
+    <title>Document</title>
 </head>
 <body>
-	<div class="countainer">
-		<img class="plant" src="img/plant_1.png">
-		<div>
-		<p class="h3">Екологія</p>
-		<p class="h32">планети Земля</p>
-		</div>
-		<div class="button">
-		<a href="start.html" class="y">Вперед</a>
-		</div>
-	</div>
+    <div class="countainer">
+        <div class="item1 a"><a class="item" href="">Instagram</a></div>
+        <div class="item2 a"><a class="item" href="">htmlbook</a></div>
+        <div class="item3 a"><a class="item" href="">Facebook</a></div>
+        <div class="item4 a"><a class="item" href="">Trello</a></div>
+        <div class="item5 a"><a class="item" href="">Youtube</a></div>
+        <div class="item6 a"><a class="item" href="">Telegram</a></div>
+    </div>
 </body>
 </html>
